syntax = "proto3";

package rivet.backend.pkg.user_follow.request_list;

import "resources/legacy/proto/common.proto";

message Request {
	repeated rivet.common.Uuid user_ids = 1;
	uint32 limit = 2;
	optional int64 anchor = 3;
}

message Response {
	message Follow {
		rivet.common.Uuid user_id = 1;
		int64 create_ts = 2;
	}

	message Follows {
		rivet.common.Uuid user_id = 1;
		repeated Follow follows = 2;
		optional int64 anchor = 3;
	}

	repeated Follows follows = 1;
}
